<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/et_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/tv_login_pass"
            android:layout_below="@+id/tv_login_pass"
            android:ems="10"
            android:textColor="@android:color/black"
            android:hint="@string/trueconf_id"
            android:inputType="textEmailAddress"
            android:visibility="gone">
        </EditText>

        <EditText
            android:id="@+id/et_pass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/et_login"
            android:layout_alignEnd="@+id/et_login"
            android:layout_below="@+id/et_login"
            android:ems="10"
            android:textColor="@android:color/black"
            android:inputType="textPassword"
            android:hint="@string/password"
            android:autofillHints="password"
            android:visibility="gone"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/et_pass"
            android:layout_below="@+id/et_pass"
            android:text="@string/login"
            android:visibility="gone"
            app:icon="@drawable/outline_login_24"/>
        <!--            app:iconGravity="textEnd"/>-->

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_logout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@+id/btn_login"
            android:layout_below="@+id/et_pass"
            android:text="@string/logout"
            android:visibility="gone"
            app:icon="@drawable/outline_logout_24"/>
        <!--            app:iconGravity="textEnd"/>-->


        <TextView
            android:id="@+id/tv_call_to"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/btn_logout"
            android:layout_alignStart="@+id/btn_login"
            android:layout_marginTop="25dp"
            android:text="@string/call_to"
            android:visibility="gone" />

        <TextView
            android:id="@+id/tv_connection_state"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="18dp"
            android:layout_marginEnd="16dp" />

        <EditText
            android:id="@+id/et_conference_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/tv_call_to"
            android:layout_below="@+id/tv_call_to"
            android:ems="10"
            android:textColor="@android:color/black"
            android:inputType="textEmailAddress"
            android:hint="@string/conference_id"
            android:autofillHints="emailAddress"
            android:visibility="gone"/>

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/tv_login_pass"
            android:layout_alignParentTop="true"
            android:text="@string/connect_to_server"/>

        <FrameLayout
            android:id="@+id/server_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView1">

            <EditText
                android:id="@+id/et_server_adress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textUri"
                android:textColor="@android:color/black"
                android:autofillHints="webAddress"
                android:hint="@string/server_id" />

            <Spinner
                android:id="@+id/sp_server_adress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"/>
        </FrameLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_connect"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/server_id"
            android:layout_alignParentStart="true"
            android:text="@string/connect" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_call"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/et_conference_id"
            android:layout_below="@+id/et_conference_id"
            android:layout_marginTop="17dp"
            android:text="@string/action_call"
            android:visibility="gone"
            app:icon="@drawable/outline_call_24"/>


        <TextView
            android:id="@+id/tv_login_pass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/btn_connect"
            android:layout_below="@+id/btn_connect"
            android:layout_marginTop="19dp"
            android:text="@string/login_pass"
            android:visibility="gone"/>

    </RelativeLayout>
</ScrollView>